kubernetes/apisvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: apisvc
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
  - port: 5000
    targetPort: 5000
