kubernetes/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clientsvc
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
  - port: 3000
    targetPort: 3000
