kubernetes/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redissvc
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
